Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/IllegalAnnotation.out
IllegalAnnotation.java:10:10: compiler.err.annotation.decl.not.allowed.here
1 error
